revert: "fix: unscrollable header menu on safari ios"
This reverts commit 0de52024e32d12ea6162c68b137be087d8456a70.

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -77,7 +77,6 @@
 	left: 0;
 	right: 0;
 	height: 0;
-	min-height: 100vh;
 	background: lib.$color-background;
 
 	@include lib.layout-full-width-container;
